force-app/main/default/objects/amazonconnect__AWS_PhoneCallEvent__c/amazonconnect__AWS_PhoneCallEvent__c.object-meta.xml
<CustomObject>
    <description>Amazon Connect Phone Call Event</description>
    <label>AWS Phone Call Event</label>
    <nameField>
        <label>AWS Phone Call Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AWS Phone Call Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>