force-app/main/default/objects/amazonconnect__AWS_PhoneCallEvent__c/fields/amazonconnect__End__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__End__c</fullName>
    <label>End</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>