force-app/main/default/objects/amazonconnect__AWS_PhoneCallEvent__c/fields/amazonconnect__FormattedTranscript__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__FormattedTranscript__c</fullName>
    <label>Formatted Transcript</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>