force-app/main/default/objects/amazonconnect__AWS_PhoneCallEvent__c/fields/amazonconnect__PhoneCall__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__PhoneCall__c</fullName>
    <label>Phone Call</label>
    <referenceTo>amazonconnect__AWS_PhoneCall__c</referenceTo>
    <relationshipLabel>Phone Call Events</relationshipLabel>
    <relationshipName>PhoneCall_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>