force-app/main/default/objects/amazonconnect__AWS_PhoneCallEvent__c/fields/amazonconnect__RegionColor__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__RegionColor__c</fullName>
    <formula>CASE(
        amazonconnect__Type__c ,
        &apos;AgentJoin&apos;, &apos;hsla(132, 100%, 50%, 0.5)&apos;,
        &apos;CustomerJoin&apos;, &apos;hsla(132, 100%, 50%, 0.5)&apos;,
        &apos;Leave&apos;, &apos;hsla(7, 100%, 65%, 0.5)&apos;,
        &apos;Speech&apos;,
        CASE(amazonconnect__SpokenBy__c, &apos;Agent&apos;, &apos;hsla(200, 50%, 70%, 0.5)&apos;, &apos;hsla(193, 0%, 70%, 0.5)&apos;)
        ,
        &apos;hsla(329, 50%, 70%, 0.4)&apos;
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Color</label>
    <type>Text</type>
</CustomField>