force-app/main/default/objects/amazonconnect__AWS_PhoneCallEvent__c/fields/amazonconnect__SentimentLabel__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__SentimentLabel__c</fullName>
    <label>Sentiment Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>