force-app/main/default/objects/amazonconnect__AWS_PhoneCallEvent__c/fields/amazonconnect__SentimentScore__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__SentimentScore__c</fullName>
    <label>Sentiment Score</label>
    <precision>17</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>