force-app/main/default/objects/amazonconnect__AWS_PhoneCallEvent__c/fields/amazonconnect__Start__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Start__c</fullName>
    <label>Start</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>