force-app/main/default/objects/amazonconnect__AWS_PhoneCallEvent__c/fields/amazonconnect__Type__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Speech</fullName>
            </value>
            <value>
                <fullName>Notes</fullName>
            </value>
            <value>
                <fullName>OnHold</fullName>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>OffHold</fullName>
                <label>Off Hold</label>
            </value>
            <value>
                <fullName>AgentJoin</fullName>
                <label>Agent Join</label>
            </value>
            <value>
                <fullName>AgentLeave</fullName>
                <label>Agent Leave</label>
            </value>
            <value>
                <fullName>CustomerJoin</fullName>
                <label>Customer Join</label>
            </value>
            <value>
                <fullName>CustomerLeave</fullName>
                <label>Customer Leave</label>
            </value>
            <value>
                <fullName>Off-Hold</fullName>
                <isActive>false</isActive>
                <label>Off-Hold</label>
            </value>
            <value>
                <fullName>On-Hold</fullName>
                <isActive>false</isActive>
                <label>On-Hold</label>
            </value>
            <value>
                <fullName>Post</fullName>
                <isActive>false</isActive>
                <label>Post</label>
            </value>
            <value>
                <fullName>Real</fullName>
                <isActive>false</isActive>
                <label>Real</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>